@@ -26,10 +26,18 @@ RELEASES="
 # not yet released
 #	keres:Κῆρες:2010-02::
 
-[ -d ./debian ] || exit 1
+#write toplevel Makefile
+for i in $RELEASES; do
+	ALL_CODENAME_SAFE="${ALL_CODENAME_SAFE} $(echo ${i} | cut -d\: -f1)"
+done
+sed	-e "s/\@ALL_CODENAME_SAFE\@/${ALL_CODENAME_SAFE}/g" \
+		./debian/templates/Makefile.in \
+			> ./Makefile
 
+[ -d ./debian ] || exit 1
 cat ./debian/templates/control.source.in > debian/control
 for i in $RELEASES; do
+
 	# write debian/control from templates
 	TEMPLATES_BIN="./debian/templates/control.binary.in"
 	if [ "x$(echo ${i} | cut -d\: -f4)" = "xedu" ]; then
@@ -42,7 +50,11 @@ for i in $RELEASES; do
 			${TEMPLATES_BIN} >> ./debian/control
 
 	# write debian/*.install from templates
-	# FIXME
+	for j in gdm kde kdm ksplash wallpaper xfce xsplash; do
+		sed	-e s/\@CODENAME_SAFE\@/$(echo ${i} | cut -d\: -f1)/g \
+				./debian/templates/sidux-art-${j}-CODENAME_SAFE.install.in \
+					> ./debian/sidux-art-${j}-$(echo ${i} | cut -d\: -f1).install
+	done
 
 	# write debian/*.postinst from templates
 	cat "./debian/templates/postinst" \
