@@ -1,0 +1,1 @@
+aether/dm-gdm/sidux-aether			usr/share/gdm/themes/
