@@ -1,0 +1,1 @@
+hypnos/dm-gdm/sidux-hypnos			usr/share/gdm/themes/
