@@ -1,0 +1,1 @@
+momos/dm-gdm/sidux-momos			usr/share/gdm/themes/
