@@ -1,0 +1,1 @@
+moros/dm-gdm/sidux-moros			usr/share/gdm/themes/
