@@ -1,0 +1,1 @@
+aether/theme-kde/sidux-aether.colors 		usr/share/kde4/apps/color-schemes/
