@@ -1,0 +1,1 @@
+hypnos/theme-kde/sidux-hypnos.colors 		usr/share/kde4/apps/color-schemes/
