@@ -1,0 +1,1 @@
+momos/theme-kde/sidux-momos.colors 		usr/share/kde4/apps/color-schemes/
