@@ -1,0 +1,1 @@
+moros/theme-kde/sidux-moros.colors 		usr/share/kde4/apps/color-schemes/
