@@ -1,0 +1,1 @@
+aether/dm-kdm/sidux-aether 		usr/share/kde4/apps/kdm/themes/
