@@ -1,0 +1,1 @@
+hypnos/dm-kdm/sidux-hypnos 		usr/share/kde4/apps/kdm/themes/
