@@ -1,0 +1,1 @@
+momos/dm-kdm/sidux-momos 		usr/share/kde4/apps/kdm/themes/
