@@ -1,0 +1,1 @@
+moros/dm-kdm/sidux-moros 		usr/share/kde4/apps/kdm/themes/
