@@ -1,0 +1,1 @@
+aether/splash-kde/sidux-aether		usr/share/kde4/apps/ksplash/Themes/
