@@ -1,0 +1,1 @@
+hypnos/splash-kde/sidux-hypnos		usr/share/kde4/apps/ksplash/Themes/
