@@ -1,0 +1,1 @@
+momos/splash-kde/sidux-momos		usr/share/kde4/apps/ksplash/Themes/
