@@ -1,0 +1,1 @@
+moros/splash-kde/sidux-moros		usr/share/kde4/apps/ksplash/Themes/
