@@ -1,0 +1,1 @@
+aether/wallpaper/sidux-aether		usr/share/wallpapers/
