@@ -1,0 +1,1 @@
+hypnos/wallpaper/sidux-hypnos		usr/share/wallpapers/
