@@ -1,0 +1,1 @@
+momos/wallpaper/sidux-momos		usr/share/wallpapers/
