@@ -1,0 +1,1 @@
+moros/wallpaper/sidux-moros		usr/share/wallpapers/
