@@ -1,0 +1,1 @@
+aether/theme-xfce/gtkrc 		usr/share/themes/sidux-aether/gtk-2.0/
