@@ -1,0 +1,1 @@
+hypnos/theme-xfce/gtkrc 		usr/share/themes/sidux-hypnos/gtk-2.0/
