@@ -1,0 +1,1 @@
+momos/theme-xfce/gtkrc 		usr/share/themes/sidux-momos/gtk-2.0/
