@@ -1,0 +1,1 @@
+moros/theme-xfce/gtkrc 		usr/share/themes/sidux-moros/gtk-2.0/
