@@ -1,0 +1,1 @@
+aether/splash-xfce/sidux-aether		usr/share/themes/
