@@ -1,0 +1,1 @@
+hypnos/splash-xfce/sidux-hypnos		usr/share/themes/
