@@ -1,0 +1,1 @@
+momos/splash-xfce/sidux-momos		usr/share/themes/
