@@ -1,0 +1,1 @@
+moros/splash-xfce/sidux-moros		usr/share/themes/
