@@ -1,0 +1,1 @@
+@CODENAME_SAFE@/dm-gdm/sidux-@CODENAME_SAFE@			usr/share/gdm/themes/
