@@ -1,0 +1,1 @@
+@CODENAME_SAFE@/theme-kde/sidux-@CODENAME_SAFE@.colors 		usr/share/kde4/apps/color-schemes/
