@@ -1,0 +1,1 @@
+@CODENAME_SAFE@/dm-kdm/sidux-@CODENAME_SAFE@ 		usr/share/kde4/apps/kdm/themes/
