@@ -1,0 +1,1 @@
+@CODENAME_SAFE@/splash-kde/sidux-@CODENAME_SAFE@		usr/share/kde4/apps/ksplash/Themes/
