@@ -1,0 +1,1 @@
+@CODENAME_SAFE@/wallpaper/sidux-@CODENAME_SAFE@		usr/share/wallpapers/
