@@ -1,0 +1,1 @@
+@CODENAME_SAFE@/theme-xfce/gtkrc 		usr/share/themes/sidux-@CODENAME_SAFE@/gtk-2.0/
