@@ -1,0 +1,1 @@
+@CODENAME_SAFE@/splash-xfce/sidux-@CODENAME_SAFE@		usr/share/themes/
